# controller/bookingController.js
@@ -1,12 +1,11 @@
 const express = require("express")
 const router = express.Router()
-const jwt = require("jsonwebtoken")
 const bookingModel = require("../model/bookingModel")
 
 router.get("/",(req,res)=>{
 
         bookingModel.find({userID:res.locals.usrID}).then((data)=>{
-            res.send(data)
+            res.status(200).json(data)
         })
   
  
@@ -26,9 +25,23 @@ router.post("/",(req,res)=>{
     newBooking
         .save()
         .then(()=>{
-            res.status(201).send("reservation successfully created")
+            res.status(201).json({message:"reservation successfully created"})
         })
 })
+
+router.delete("/", (req, res) => {
+    const itemID = req.body.itemID
+    cardModel.deleteOne({ _id: itemID }, (error) => {
+        if (error) {
+            throw error
+        } else {
+            res.status(202).json({message:"Successfully deleted"})
+        }
+    })
+})
+
+
+
 
 
 module.exports = router
