# controller/loginController.js
@@ -1,16 +1,13 @@
 const express = require("express")
 const router = express.Router()
 const UserModel = require("../model/userModel");
-const path = require('path');
 const jwt = require('jsonwebtoken');
 const bcrypt = require("bcryptjs")
-router.get("/",(req,res)=>{
-    res.sendFile(path.join(__dirname, '/', 'login.html'));
-})
 
-const maxAge = 60*60*24
+
+
 const createToken=(id)=>{
-    return jwt.sign({id}, "gizli", { expiresIn: '1800s' });
+    return jwt.sign({id}, "secureComp", { expiresIn: '1800s' });
 }
 
 router.post("/",(req,res)=>{
@@ -22,7 +19,7 @@ router.post("/",(req,res)=>{
          
            const validPassword = bcrypt.compare(password, data.password);
             if(validPassword){
-                res.cookie('jwt',token,{httpOnly:true,maxAge:maxAge*1000})
+                res.cookie('token',token,{httpOnly:true,maxAge:maxAge*1000})
         
                 res.redirect("/booking")
             }else{
@@ -30,7 +27,7 @@ router.post("/",(req,res)=>{
             }
 
         }else{
-            res.status(402).send("user not found")
+            res.status(404).send("user not found")
         }
     })
 })
